---------------------------------------------------------------------------------------------------
Version: 1.18.4
Date: 2020-04-XX
  Features:
    - Added Burner inserter Mk2 and burner filter-inserter Mk2 that accept Omnified Fuel
  Changes:
    - Moved Omnium-power behind logistics science pack research
---------------------------------------------------------------------------------------------------
Version: 1.18.3
Date: 2020-04-17
  Changes:
    - Change the Subgroup Icon to the Thumbnail
    - Increase the crafting time of Purified Omnite to 2s
---------------------------------------------------------------------------------------------------
Version: 1.18.2
Date: 2020-04-19
  Changes:
    - Reorganised Item-Subgroups
    - Steel Furnaces accept Omnified Fuel
    - Disabled Bob´s burner generator
    - Buff Omnitor Assembler speed when playing without Bob´s assembly
    - Lower Omnitor Omnicium cost
  Bugfixes:
    - Fixed Omni Furnaces not beeing fast replacable
    - Fixed Furnaces having 7 Output slots in some cases
    - Fixed logistics Tech having hidden prerequisites in some cases
---------------------------------------------------------------------------------------------------
Version: 1.18.1
Date: 2020-04-17
  Bugfixes:
    - Fixed logistics tech dead end. Might have some empty techs left in some cases.
    - Fixed crashes if Bob's assembers are on without steam machines
---------------------------------------------------------------------------------------------------
Version: 1.18.0
Date: 2020-04-13
  Features:
    - First public release
    - Added Crystal Solar Panels (Max Size & Tier configurable)
    - Added Solar Road (Tiles that produce & distribute energy)
    - Added Omnified Fuel, Omnified Fuel has a boosted Fuel value. 
      All available Fuels have to be Omnified before they can be used
    - Lowered the crafting Speed of the Omnitor Assembling Machine
    - Added 2 new Omnifurnace Tiers