@@ -65,6 +65,13 @@ omnium-power-5=Omnified Fuel: unlimited refining
 crystal-solar-panel=Crystal solar panel tier __1__ size __2__
 omni-solar-road=Solar Road
 
+[technology-description]
+omnium-power-1=Omnify fuels up to 5MJ and improve their fuel value slightly
+omnium-power-2=Omnify fuels up to 10MJ and improve their fuel value slightly
+omnium-power-3=Omnify fuels up to 40MJ and improve their fuel value slightly
+omnium-power-4=Omnify fuels up to 250MJ and improve their fuel value slightly
+omnium-power-5=Omnify all fuels and improve their fuel value slightly
+
 [item-group-name]
 omnienergy=Omnienergy
 
